# kioku

./: .gitignore  CLAUDE.md  CODE_REVIEW.md  LICENSE  NOTIFICATIONS.md  README.md  ROADMAP.md  SCHEMA.md  index.html  package-lock.json  package.json  vite.config.ts
.claude/: settings.local.json
docs/release-notes/: 1.0.0.md  v1.0.0.md
examples/: javascript-quiz.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: schema.sql
src-tauri/src/: auth.rs  db.rs  lib.rs  local_db.rs  main.rs
src-tauri/src/commands/: courses.rs  decks.rs  images.rs  mod.rs  notebooks.rs  quizzes.rs  sessions.rs  transfer.rs  tts.rs  users.rs
src-tauri/src/db/: courses.rs  decks.rs  mod.rs  models.rs  notebooks.rs  quizzes.rs  state.rs  stats.rs  users.rs
src/components/: AutoplayControls.tsx  AutoplayPhaseBar.tsx  AvatarPicker.tsx  CardModal.tsx  CodeEditor.tsx  ConnectionIndicator.tsx  DropZone.tsx  ErrorBoundary.tsx  Layout.tsx  ListenModeControls.tsx  ListenModePhaseBar.tsx  PiperSettings.tsx  QuickSwitcher.tsx  Toast.tsx  index.ts
src/context/: AuthContext.tsx  SettingsContext.tsx  ShortcutsContext.tsx  ToastContext.tsx  index.ts
src/hooks/: index.ts  useAutoSave.ts  useAutoplay.ts  useKeyboardShortcuts.ts  useListenMode.ts  useMarkdownOutline.ts  useSearchFilter.ts  useSidebarState.ts  useUnsavedChanges.tsx
src/lib/: auth.ts  db.ts  index.ts  linkParser.ts  piper.ts  settings.ts  slug.ts  storage.ts  tts.ts  utils.ts
src/pages/: AutoplayMode.tsx  DeckEdit.tsx  (+24 more)
(+37 files in other folders)
